--- a/docs/faststore/docs/faststore-api/schema/inputs.mdx
+++ b/docs/faststore/docs/faststore-api/schema/inputs.mdx
@@ -15,7 +15,7 @@ title: 'Inputs'
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>latitude</strong></td>
-<td valign="top"><a href="#float">Float</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>!</td>
 <td>
 
 The latitude of the geographic coordinates.
@@ -24,7 +24,7 @@ The latitude of the geographic coordinates.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>longitude</strong></td>
-<td valign="top"><a href="#float">Float</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>!</td>
 <td>
 
 The longitude of the geographic coordinates.
@@ -49,7 +49,7 @@ Person data input to the newsletter.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>name</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Person's name.
@@ -58,7 +58,7 @@ Person's name.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>email</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Person's email.
@@ -83,7 +83,7 @@ Shipping Simulation item input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>id</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 ShippingItem ID / Sku.
@@ -92,7 +92,7 @@ ShippingItem ID / Sku.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>quantity</strong></td>
-<td valign="top"><a href="#int">Int</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a>!</td>
 <td>
 
 Number of items.
@@ -101,7 +101,7 @@ Number of items.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>seller</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Seller responsible for the ShippingItem.
@@ -126,7 +126,7 @@ Shopping cart input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>order</strong></td>
-<td valign="top"><a href="#istoreorder">IStoreOrder</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreorder">IStoreOrder</a>!</td>
 <td>
 
 Order information, including `orderNumber`, `acceptedOffer` and `shouldSplitItem`.
@@ -149,7 +149,7 @@ Order information, including `orderNumber`, `acceptedOffer` and `shouldSplitItem
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>code</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Currency code (e.g: USD).
@@ -158,7 +158,7 @@ Currency code (e.g: USD).
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>symbol</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Currency symbol (e.g: $).
@@ -181,7 +181,7 @@ Currency symbol (e.g: $).
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>deliveryChannel</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 The delivery channel information of the session.
@@ -190,7 +190,7 @@ The delivery channel information of the session.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>deliveryMethod</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 The delivery method information of the session.
@@ -199,7 +199,7 @@ The delivery method information of the session.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>deliveryWindow</strong></td>
-<td valign="top"><a href="#istoredeliverywindow">IStoreDeliveryWindow</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoredeliverywindow">IStoreDeliveryWindow</a></td>
 <td>
 
 The delivery window information of the session.
@@ -224,7 +224,7 @@ Delivery window information.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>startDate</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 The delivery window start date information.
@@ -233,7 +233,7 @@ The delivery window start date information.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>endDate</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 The delivery window end date information.
@@ -256,7 +256,7 @@ The delivery window end date information.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>latitude</strong></td>
-<td valign="top"><a href="#float">Float</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>!</td>
 <td>
 
 The latitude of the geographic coordinates.
@@ -265,7 +265,7 @@ The latitude of the geographic coordinates.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>longitude</strong></td>
-<td valign="top"><a href="#float">Float</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>!</td>
 <td>
 
 The longitude of the geographic coordinates.
@@ -290,7 +290,7 @@ Image input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>url</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Image input URL.
@@ -299,7 +299,7 @@ Image input URL.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>alternateName</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Alias for the input image.
@@ -324,7 +324,7 @@ Offer input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>price</strong></td>
-<td valign="top"><a href="#float">Float</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>!</td>
 <td>
 
 Also known as spot price.
@@ -333,7 +333,7 @@ Also known as spot price.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>listPrice</strong></td>
-<td valign="top"><a href="#float">Float</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#float">Float</a>!</td>
 <td>
 
 This is displayed as the "from" price in the context of promotions' price comparison. This may change before it reaches the shelf.
@@ -342,7 +342,7 @@ This is displayed as the "from" price in the context of promotions' price compar
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>seller</strong></td>
-<td valign="top"><a href="#istoreorganization">IStoreOrganization</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreorganization">IStoreOrganization</a>!</td>
 <td>
 
 Seller responsible for the offer.
@@ -351,7 +351,7 @@ Seller responsible for the offer.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>itemOffered</strong></td>
-<td valign="top"><a href="#istoreproduct">IStoreProduct</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreproduct">IStoreProduct</a>!</td>
 <td>
 
 Information on the item being offered.
@@ -360,7 +360,7 @@ Information on the item being offered.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>quantity</strong></td>
-<td valign="top"><a href="#int">Int</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a>!</td>
 <td>
 
 Number of items offered.
@@ -385,7 +385,7 @@ Order input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>orderNumber</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 ID of the order in [VTEX order management](https://help.vtex.com/en/tutorial/license-manager-resources-oms--60QcBsvWeum02cFi3GjBzg#).
@@ -394,7 +394,7 @@ ID of the order in [VTEX order management](https://help.vtex.com/en/tutorial/lic
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>acceptedOffer</strong></td>
-<td valign="top">[<a href="#istoreoffer">IStoreOffer</a>!]!</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreoffer">IStoreOffer</a>!]!</td>
 <td>
 
 Array with information on each accepted offer.
@@ -403,7 +403,7 @@ Array with information on each accepted offer.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>shouldSplitItem</strong></td>
-<td valign="top"><a href="#boolean">Boolean</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#boolean">Boolean</a></td>
 <td>
 
 Indicates whether or not items with attachments should be split.
@@ -428,7 +428,7 @@ Organization input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>identifier</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Organization ID.
@@ -453,7 +453,7 @@ Client profile data.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>id</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Client ID.
@@ -462,7 +462,7 @@ Client ID.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>email</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Client email.
@@ -471,7 +471,7 @@ Client email.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>givenName</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Client first name.
@@ -480,7 +480,7 @@ Client first name.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>familyName</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Client last name.
@@ -505,7 +505,7 @@ Product input. Products are variants within product groups, equivalent to VTEX [
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>sku</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Stock Keeping Unit. Merchant-specific ID for the product.
@@ -514,7 +514,7 @@ Stock Keeping Unit. Merchant-specific ID for the product.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>name</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Product name.
@@ -523,7 +523,7 @@ Product name.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>image</strong></td>
-<td valign="top">[<a href="#istoreimage">IStoreImage</a>!]!</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreimage">IStoreImage</a>!]!</td>
 <td>
 
 Array of product images.
@@ -532,7 +532,7 @@ Array of product images.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>additionalProperty</strong></td>
-<td valign="top">[<a href="#istorepropertyvalue">IStorePropertyValue</a>!]</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istorepropertyvalue">IStorePropertyValue</a>!]</td>
 <td>
 
 Custom Product Additional Properties.
@@ -555,7 +555,7 @@ Custom Product Additional Properties.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>propertyID</strong></td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Property id. This propert changes according to the content of the object.
@@ -564,7 +564,7 @@ Property id. This propert changes according to the content of the object.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>value</strong></td>
-<td valign="top"><a href="#objectorstring">ObjectOrString</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#objectorstring">ObjectOrString</a>!</td>
 <td>
 
 Property value. May hold a string or the string representation of an object.
@@ -573,7 +573,7 @@ Property value. May hold a string or the string representation of an object.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>name</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Property name.
@@ -582,7 +582,7 @@ Property name.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>valueReference</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Specifies the nature of the value
@@ -607,7 +607,7 @@ Selected search facet input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>key</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Selected search facet key.
@@ -616,7 +616,7 @@ Selected search facet key.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>value</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Selected search facet value.
@@ -641,7 +641,7 @@ Session input.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>locale</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Session input locale.
@@ -650,7 +650,7 @@ Session input locale.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>currency</strong></td>
-<td valign="top"><a href="#istorecurrency">IStoreCurrency</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istorecurrency">IStoreCurrency</a>!</td>
 <td>
 
 Session input currency.
@@ -659,7 +659,7 @@ Session input currency.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>country</strong></td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Session input country.
@@ -668,7 +668,7 @@ Session input country.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>channel</strong></td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Session input channel.
@@ -677,7 +677,7 @@ Session input channel.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>deliveryMode</strong></td>
-<td valign="top"><a href="#istoredeliverymode">IStoreDeliveryMode</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoredeliverymode">IStoreDeliveryMode</a></td>
 <td>
 
 Session input delivery mode.
@@ -686,7 +686,7 @@ Session input delivery mode.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>addressType</strong></td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Session input address type.
@@ -695,7 +695,7 @@ Session input address type.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>postalCode</strong></td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Session input postal code.
@@ -704,7 +704,7 @@ Session input postal code.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>geoCoordinates</strong></td>
-<td valign="top"><a href="#istoregeocoordinates">IStoreGeoCoordinates</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoregeocoordinates">IStoreGeoCoordinates</a></td>
 <td>
 
 Session input geoCoordinates.
@@ -713,7 +713,7 @@ Session input geoCoordinates.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>person</strong></td>
-<td valign="top"><a href="#istoreperson">IStorePerson</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreperson">IStorePerson</a></td>
 <td>
 
 Session input person.
