update "enums" description.

--- a/docs/faststore/docs/faststore-api/schema/enums.mdx
+++ b/docs/faststore/docs/faststore-api/schema/enums.mdx
@@ -79,7 +79,7 @@ Search facet type.
 <td valign="top"><strong>BOOLEAN</strong></td>
 <td>
 
-Indicates boolean search facet.
+Indicates a filter with boolean options (e.g., `yes` and `no`), for narrowing search results.
 
 </td>
 </tr>
@@ -87,7 +87,7 @@ Indicates boolean search facet.
 <td valign="top"><strong>RANGE</strong></td>
 <td>
 
-Indicates range type search facet.
+Indicates a filter to choose between a range of values (e.g., `price`, `size`, etc) to refine search results.
 
 </td>
 </tr>
@@ -183,15 +183,15 @@ Status used to indicate a message type. For instance, a shopping cart informativ
 <tbody>
 <tr>
 <td valign="top"><strong>INFO</strong></td>
-<td></td>
+<td>Indicates non-critical notifications or informative messages related to the user's action.</td>
 </tr>
 <tr>
 <td valign="top"><strong>WARNING</strong></td>
-<td></td>
+<td>Indicates a potential issue or unexpected behavior that might require user attention but doesn't necessarily prevent them from continuing.</td>
 </tr>
 <tr>
 <td valign="top"><strong>ERROR</strong></td>
-<td></td>
+<td>Indicates a critical issue that prevents the user from completing an action or indicates a problem with the system.</td>
 </tr>
 </tbody>
 </table>
