--- a/docs/faststore/components/molecules/order-summary.mdx
+++ b/docs/faststore/components/molecules/order-summary.mdx
@@ -91,6 +91,20 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
     token="--fs-order-summary-total-text-font-weight"
     value="var(--fs-text-weight-bold)"
   />
+  <TokenDivider />
+  <TokenRow
+    token="--fs-order-summary-taxes-label-color"
+    value="var(--fs-color-info-text)"
+    isColor
+  />
+  <TokenRow
+    token="--fs-order-summary-taxes-text-size"
+    value="var(--fs-text-size-tiny)"
+  />
+  <TokenRow
+    token="--fs-order-summary-taxes-text-weight"
+    value="var(--fs-text-weight-regular)"
+  />
 </TokenTable>
 
 ---
@@ -116,3 +130,5 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 `data-fs-order-summary-total-label`
 
 `data-fs-order-summary-total-value`
+
+`data-fs-order-summary-taxes-label`
