--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -366,6 +366,24 @@ All product card related components support all attributes also supported by the
   />
 </TokenTable>
 
+#### Tax Label
+
+<TokenTable>
+  <TokenRow
+    token="--fs-order-summary-taxes-label-color"
+    value="var(--fs-color-info-text)"
+    isColor
+  />
+  <TokenRow
+    token="--fs-order-summary-taxes-text-size"
+    value="var(--fs-text-size-tiny)"
+  />
+  <TokenRow
+    token="--fs-order-summary-taxes-text-weight"
+    value="var(--fs-text-weight-regular)"
+  />
+</TokenTable>
+
 ### Variants
 
 #### Default
@@ -693,6 +711,8 @@ Use the `ProductCard` to:
 `data-fs-product-card-prices`
 
 `data-fs-product-card-actions`
+
+`data-fs-product-card-taxes-label`
 
 ---
 
