add an introduction for each subtitle.

--- a/docs/faststore/docs/faststore-api/schema/scalars.mdx
+++ b/docs/faststore/docs/faststore-api/schema/scalars.mdx
@@ -6,6 +6,8 @@ title: 'Scalars'
 
 ### ActiveVariations
 
+The `ActiveVariations` scalar type represents a combination of active product variations.
+
 Example:
 
 ```json
@@ -23,6 +25,8 @@ The `Boolean` scalar type represents `true` or `false`.
 The `Float` scalar type represents signed double-precision fractional values as specified by [IEEE 754](https://en.wikipedia.org/wiki/IEEE_floating_point).
 
 ### FormattedVariants
+
+The `FormattedVariants` scalar type represents a collection of product variations with additional details like image source, description, and values.
 
 Example:
 
@@ -80,6 +84,8 @@ Example:
 The `String` scalar type represents textual data, represented as UTF-8 character sequences. The String type is most often used by GraphQL to represent free-form human-readable text.
 
 ### VariantsByName
+
+The `VariantsByName` scalar type represents a collection of variations listed by their names, like a list of available `Color` options or `Size` options.
 
 Example:
 
