--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Adding a contact form to a landing page'
+title: "Adding a contact form to a landing page"
 ---
 
-This guide illustrates how to handle data from a Contact Us form and send it to a third-party API. To this end, we will create a Contact Us page with a Contact form. 
+This guide illustrates how to handle data from a Contact Us form and send it to a third-party API. To this end, we will create a Contact Us page with a Contact form.
 
 > ℹ️ For detailed instructions on API extensions, refer to [API extensions](https://developers.vtex.com/docs/guides/faststore/api-extensions-overview) guide.
 
@@ -22,10 +22,10 @@ First, you need to set up the necessary GraphQL files to handle data submissions
 
 1. In your store repository, go to the `src` folder, and create a new `graphql` subfolder:
 
-  ```bash
-  mkdir -p src/graphql/thirdParty/{resolvers,typeDefs}
-  ```
- 
+```bash
+mkdir -p src/graphql/thirdParty/{resolvers,typeDefs}
+```
+
 2. Create an `index.ts` file inside the `resolvers` folder to set up the base structure for your resolver functions.
 
 > ℹ️ For further details on code implementation, see the [`thirdParty`](https://github.com/vtex-sites/playground.store/tree/main/src/graphql/thirdParty) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
@@ -33,34 +33,37 @@ First, you need to set up the necessary GraphQL files to handle data submissions
 ---
 
 ### Define the types
+
 Next, define the GraphQL types for your contact form.
 
 1. Create a `contactForm.graphql` file in the `thirdParty` folder. This file will contain type definitions for your GraphQL schema.
 2. In the `graphql/thirdParty/resolvers` folder, create a `contactForm.ts` file to handle the resolver logic for your contact form.
 3. In the `graphql/thirdParty/typeDefs` folder, create a `contactForm.graphql` file and add the following schema definitions:
 
-  <CH.Code show={["contactForm.graphql"]}>
-  ```graphql contactForm.graphql
-  type ContactFormResponse {
-    message: String!
-  }
+<CH.Code show={["contactForm.graphql"]}>
 
-  input ContactFormInput {
-    name: String!
-    email: String!
-    subject: String!
-    message: String!
-  }
+```graphql contactForm.graphql
+type ContactFormResponse {
+  message: String!
+}
 
-  type Mutation {
-    submitContactForm(input: ContactFormInput!): ContactFormResponse
-  }
-  ```
-  </CH.Code>
+input ContactFormInput {
+  name: String!
+  email: String!
+  subject: String!
+  message: String!
+}
 
-  - `ContactFormResponse`: Defines the structure of the response from the API, with a mandatory message field.
-  - `ContactFormInput`: Specifies the input fields required for the contact form.
-  - `Mutation`: Declares a mutation for submitting the contact form data.
+type Mutation {
+  submitContactForm(input: ContactFormInput!): ContactFormResponse
+}
+```
+
+</CH.Code>
+
+- `ContactFormResponse`: Defines the structure of the response from the API, with a mandatory message field.
+- `ContactFormInput`: Specifies the input fields required for the contact form.
+- `Mutation`: Declares a mutation for submitting the contact form data.
 
 ---
 
@@ -70,67 +73,74 @@ Now, let's create the resolver function to process the form submission.
 
 1. In the `contactForm.ts` file, add the following:
 
-  <CH.Code show={["contactForm.ts"]}>
-  ```ts contactForm.ts mark=10,12
-  type SubmitContactFormData = {
-    input: {
-      name: string;
-      email: string;
-      subject?: string;
-      message: string;
-    };
+<CH.Code show={["contactForm.ts"]}>
+
+```ts contactForm.ts mark=10,12
+type SubmitContactFormData = {
+  input: {
+    name: string;
+    email: string;
+    subject?: string;
+    message: string;
   };
+};
 
-  const contactFormResolver = {
-    Mutation: {
-      submitContactForm: async (_: never, data: SubmitContactFormData) => {
-        const { input } = data;
+const contactFormResolver = {
+  Mutation: {
+    submitContactForm: async (_: never, data: SubmitContactFormData) => {
+      const { input } = data;
 
-        try {
-          const response = await fetch(
-            "https://playground.vtexcommercestable.com.br/api/dataentities/ContactForm/documents?_schema=contactForm",
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify(input),
-            }
-          );
-
-          if (!response.ok) {
-            throw new Error("Error while sending the message");
+      try {
+        const response = await fetch(
+          "https://playground.vtexcommercestable.com.br/api/dataentities/ContactForm/documents?_schema=contactForm",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(input),
           }
+        );
 
-          return { message: "Your message was sent successfully!" };
-        } catch (error) {
-          return { message: error };
+        if (!response.ok) {
+          throw new Error("Error while sending the message");
         }
-      },
+
+        return { message: "Your message was sent successfully!" };
+      } catch (error) {
+        return { message: error };
+      }
     },
-  };
+  },
+};
 
-  export default contactFormResolver;
-  ```
-  </CH.Code>
+export default contactFormResolver;
+```
 
-  - `SubmitContactFormData`: Defines the structure of the expected input data.
-  - `contactFormResolver`: Implements the `submitContactForm` mutation, sending the form data to the specified API  endpoint and handling the response.
+</CH.Code>
 
+- `SubmitContactFormData`: Defines the structure of the expected input data.
+- `contactFormResolver`: Implements the `submitContactForm` mutation, sending the form data to the specified API endpoint and handling the response.
 
-2. In the `graphql/thirdParty/resolvers` folder, create an `index.ts` file to consolidate the resolvers:
+---
 
-  <CH.Code show={["index.ts"]}>
-  ```ts index.ts
-  import contactFormResolver from "./contactForm";
+#### Consolidating the resolvers
 
-  const resolvers = {
-    ...contactFormResolver,
-  };
+In the `graphql/thirdParty/resolvers` folder, create an `index.ts` file to consolidate the resolvers:
 
-  export default resolvers;
-  ```
-  </CH.Code>
+<CH.Code show={["index.ts"]}>
+
+```ts index.ts
+import contactFormResolver from "./contactForm";
+
+const resolvers = {
+  ...contactFormResolver,
+};
+
+export default resolvers;
+```
+
+</CH.Code>
 
 This file imports the `contactFormResolver` and combines it with other potential resolvers into a single object.
 
@@ -144,118 +154,120 @@ Create a new section to receive the Contact Form data.
 
 2. In `ContactForm` folder, create the following files:
 
-  - `ContactForm.tsx`: The main component file.
-  - `contant-form.module.scss`: The stylesheet for the component.
+- `ContactForm.tsx`: The main component file.
+- `contant-form.module.scss`: The stylesheet for the component.
 
 3. Add the following to the `ContactForm.tsx`:
 
-  <CH.Code show={["ContactForm.tsx"]}>
-  ```tsx ContactForm.tsx
-  import { useCallback, useState } from "react";
-    import { gql } from "@faststore/core/api";
-    import { useLazyQuery_unstable as useLazyQuery } from "@faststore/core/experimental";
+<CH.Code show={["ContactForm.tsx"]}>
 
-    import {
-      InputField as UIInputField,
-      Button as UIButton,
-      TextArea as UITextArea,
-    } from "@faststore/ui";
+```tsx ContactForm.tsx
+import { useCallback, useState } from "react";
+import { gql } from "@faststore/core/api";
+import { useLazyQuery_unstable as useLazyQuery } from "@faststore/core/experimental";
 
-    import styles from "./contact-form.module.scss";
+import {
+  InputField as UIInputField,
+  Button as UIButton,
+  TextArea as UITextArea,
+} from "@faststore/ui";
 
-    export const mutation = gql(`
-        mutation SubmitContactForm($data: ContactFormInput!) {
-          submitContactForm(input: $data) {
-            message
-          }
+import styles from "./contact-form.module.scss";
+
+export const mutation = gql(`
+      mutation SubmitContactForm($data: ContactFormInput!) {
+        submitContactForm(input: $data) {
+          message
         }
-      `);
+      }
+    `);
 
-    export const ContactForm = () => {
-      const [submitContactForm, { data, error }] = useLazyQuery(mutation, {
-        data: { name: "", email: "", subject: "", message: "" },
-      });
+export const ContactForm = () => {
+  const [submitContactForm, { data, error }] = useLazyQuery(mutation, {
+    data: { name: "", email: "", subject: "", message: "" },
+  });
 
-      const [name, setName] = useState("");
-      const [email, setEmail] = useState("");
-      const [subject, setSubject] = useState("");
-      const [message, setMessage] = useState("");
+  const [name, setName] = useState("");
+  const [email, setEmail] = useState("");
+  const [subject, setSubject] = useState("");
+  const [message, setMessage] = useState("");
 
-      const onSubmit = useCallback(
-        (event: React.FormEvent<HTMLFormElement>) => {
-          event.preventDefault();
+  const onSubmit = useCallback(
+    (event: React.FormEvent<HTMLFormElement>) => {
+      event.preventDefault();
 
-          const formValues = {
-            name,
-            email,
-            subject,
-            message,
-          };
+      const formValues = {
+        name,
+        email,
+        subject,
+        message,
+      };
 
-          submitContactForm({ data: formValues });
+      submitContactForm({ data: formValues });
 
-          if (error) {
-            console.error(error);
-          }
+      if (error) {
+        console.error(error);
+      }
 
-          if (data) {
-            setName("");
-            setEmail("");
-            setSubject("");
-            setMessage("");
-          }
-        },
-        [submitContactForm]
-      );
+      if (data) {
+        setName("");
+        setEmail("");
+        setSubject("");
+        setMessage("");
+      }
+    },
+    [submitContactForm]
+  );
 
-      return (
-        <section className={styles.contactForm}>
-          <div>
-            <h2>Contact Us</h2>
-            <p>
-              Need to get in touch with us? Please fill out the form, we'll get in
-              touch with you soon.
-            </p>
-          </div>
-          <form onSubmit={onSubmit}>
-            <UIInputField
-              id="name"
-              label="Name"
-              value={name}
-              onChange={(e) => setName(e.target.value)}
-            />
-            <UIInputField
-              id="email"
-              label="Email"
-              value={email}
-              onChange={(e) => setEmail(e.target.value)}
-            />
-            <UIInputField
-              id="subject"
-              label="Subject"
-              value={subject}
-              onChange={(e) => setSubject(e.target.value)}
-            />
-            <UITextArea
-              id="message"
-              placeholder="Write here your message."
-              value={message}
-              onChange={(e) => setMessage(e.target.value)}
-            />
-            <UIButton type="submit" variant="primary">
-              Send
-            </UIButton>
-          </form>
-        </section>
-      );
-    };
+  return (
+    <section className={styles.contactForm}>
+      <div>
+        <h2>Contact Us</h2>
+        <p>
+          Need to get in touch with us? Please fill out the form, we'll get in
+          touch with you soon.
+        </p>
+      </div>
+      <form onSubmit={onSubmit}>
+        <UIInputField
+          id="name"
+          label="Name"
+          value={name}
+          onChange={(e) => setName(e.target.value)}
+        />
+        <UIInputField
+          id="email"
+          label="Email"
+          value={email}
+          onChange={(e) => setEmail(e.target.value)}
+        />
+        <UIInputField
+          id="subject"
+          label="Subject"
+          value={subject}
+          onChange={(e) => setSubject(e.target.value)}
+        />
+        <UITextArea
+          id="message"
+          placeholder="Write here your message."
+          value={message}
+          onChange={(e) => setMessage(e.target.value)}
+        />
+        <UIButton type="submit" variant="primary">
+          Send
+        </UIButton>
+      </form>
+    </section>
+  );
+};
 
-    export default ContactForm;
-  ```
-  </CH.Code>
+export default ContactForm;
+```
 
-  - This component renders a contact form with name, email, subject, and message fields.
-  - The `onSubmit` function handles form submission, sends the data to the server, and clears the form fields upon success.
+</CH.Code>
+
+- This component renders a contact form with name, email, subject, and message fields.
+- The `onSubmit` function handles form submission, sends the data to the server, and clears the form fields upon success.
 
 ---
 
@@ -311,20 +323,22 @@ In the `contact-form.module.scss` file, add the following:
   }
 }
 ```
+
 </CH.Code>
 
 This stylesheet applies specific styles to the Contact Form component, including layout and spacing adjustments.
 
-> ℹ️ For further details on code implementation, see the [ContactForm](https://github.com/vtex-sites/playground.store/tree/main/src/components/ContactForm) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository. 
+> ℹ️ For further details on code implementation, see the [ContactForm](https://github.com/vtex-sites/playground.store/tree/main/src/components/ContactForm) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
 
 ---
 
 ### Synchronizing the changes with the Headless CMS
 
 Add the section to the Headless CMS by following the instructions available in [syncing components with the Headless CMS](https://developers.vtex.com/docs/guides/faststore/overrides-syncing-components-with-the-headless-cms).
-   The following schema was used as an example:
+The following schema was used as an example:
 
 <CH.Code show={["sections.json"]}>
+
 ```json sections.json
 [
   {
@@ -338,13 +352,14 @@ Add the section to the Headless CMS by following the instructions available in [
   }
 ]
 ```
+
 </CH.Code>
 
 > ℹ️ For further details on code implementation, see the `sections.json` file available in the playground.store repository.
 
 </CH.Scrollycoding>
 
-## Creating a new landing page
+### Creating a new landing page
 
 Let’s create a new landing page for the Contact Us page to add the new Contact form section. For this part, we will follow the [Creating a new page tutorial](https://help.vtex.com/en/tutorial/managing-pages--3DO6rBhZ1p3zndnFu5BgRt#creating-a-new-page).
 
