fix Adding a contact form to a landing page title

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Adding a contact form to a landing page"
+title: 'Adding a contact form to a landing page'
 ---
 
 This guide illustrates how to handle data from a Contact Us form and send it to a third-party API. To this end, we will create a Contact Us page with a Contact form.
