codehike: fix code snippets height

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -22,14 +22,15 @@ First, you need to set up the necessary GraphQL files to handle data submissions
 
 1. In your store repository, go to the `src` folder, and create a new `graphql` subfolder:
 
+<CH.Code show={["contactForm.graphql"]} rows={1}>
 ```bash
 mkdir -p src/graphql/thirdParty/{resolvers,typeDefs}
 ```
+</CH.Code>
 
 2. Create an `index.ts` file inside the `resolvers` folder to set up the base structure for your resolver functions.
 
 > ℹ️ For further details on code implementation, see the [`thirdParty`](https://github.com/vtex-sites/playground.store/tree/main/src/graphql/thirdParty) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
-
 ---
 
 ### Define the types
@@ -40,7 +41,7 @@ Next, define the GraphQL types for your contact form.
 2. In the `graphql/thirdParty/resolvers` folder, create a `contactForm.ts` file to handle the resolver logic for your contact form.
 3. In the `graphql/thirdParty/typeDefs` folder, create a `contactForm.graphql` file and add the following schema definitions:
 
-<CH.Code show={["contactForm.graphql"]}>
+<CH.Code show={["contactForm.graphql"]} rows={14}>
 
 ```graphql contactForm.graphql
 type ContactFormResponse {
@@ -73,7 +74,7 @@ Now, let's create the resolver function to process the form submission.
 
 1. In the `contactForm.ts` file, add the following:
 
-<CH.Code show={["contactForm.ts"]}>
+<CH.Code show={["contactForm.ts"]} rows={17}>
 
 ```ts contactForm.ts mark=10,12
 type SubmitContactFormData = {
@@ -128,7 +129,7 @@ export default contactFormResolver;
 
 In the `graphql/thirdParty/resolvers` folder, create an `index.ts` file to consolidate the resolvers:
 
-<CH.Code show={["index.ts"]}>
+<CH.Code show={["index.ts"]} rows={7}>
 
 ```ts index.ts
 import contactFormResolver from "./contactForm";
@@ -159,7 +160,7 @@ Create a new section to receive the Contact Form data.
 
 3. Add the following to the `ContactForm.tsx`:
 
-<CH.Code show={["ContactForm.tsx"]}>
+<CH.Code show={["ContactForm.tsx"]} rows={27}>
 
 ```tsx ContactForm.tsx
 import { useCallback, useState } from "react";
@@ -275,7 +276,7 @@ export default ContactForm;
 
 In the `contact-form.module.scss` file, add the following:
 
-<CH.Code show={["contact-form.module.scss"]}>
+<CH.Code show={["contact-form.module.scss"]} rows={17}>
 
 ```scss contact-form.module.scss
 .contactForm {
@@ -329,7 +330,6 @@ In the `contact-form.module.scss` file, add the following:
 This stylesheet applies specific styles to the Contact Form component, including layout and spacing adjustments.
 
 > ℹ️ For further details on code implementation, see the [ContactForm](https://github.com/vtex-sites/playground.store/tree/main/src/components/ContactForm) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
-
 ---
 
 ### Synchronizing the changes with the Headless CMS
@@ -337,7 +337,7 @@ This stylesheet applies specific styles to the Contact Form component, including
 Add the section to the Headless CMS by following the instructions available in [syncing components with the Headless CMS](https://developers.vtex.com/docs/guides/faststore/overrides-syncing-components-with-the-headless-cms).
 The following schema was used as an example:
 
-<CH.Code show={["sections.json"]}>
+<CH.Code show={["sections.json"]} rows={11}>
 
 ```json sections.json
 [
@@ -356,7 +356,6 @@ The following schema was used as an example:
 </CH.Code>
 
 > ℹ️ For further details on code implementation, see the `sections.json` file available in the playground.store repository.
-
 </CH.Scrollycoding>
 
 ### Creating a new landing page
