codehike: fix the first code snippet height

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -22,7 +22,7 @@ First, you need to set up the necessary GraphQL files to handle data submissions
 
 1. In your store repository, go to the `src` folder, and create a new `graphql` subfolder:
 
-<CH.Code show={["contactForm.graphql"]} rows={1}>
+<CH.Code rows={1}>
 ```bash
 mkdir -p src/graphql/thirdParty/{resolvers,typeDefs}
 ```
