codehike: testing code snippets height

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -14,7 +14,7 @@ This guide illustrates how to handle data from a Contact Us form and send it to 
 
 ## implementation
 
-<CH.Scrollycoding>
+<CH.Scrollycoding rows={6}>
 
 ### Create the GraphQL files
 
@@ -41,7 +41,7 @@ Next, define the GraphQL types for your contact form.
 2. In the `graphql/thirdParty/resolvers` folder, create a `contactForm.ts` file to handle the resolver logic for your contact form.
 3. In the `graphql/thirdParty/typeDefs` folder, create a `contactForm.graphql` file and add the following schema definitions:
 
-<CH.Code show={["contactForm.graphql"]} rows={14}>
+<CH.Code rows={6} show={["contactForm.graphql"]}>
 
 ```graphql contactForm.graphql
 type ContactFormResponse {
