fix Scrollycoding tag

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -14,7 +14,7 @@ This guide illustrates how to handle data from a Contact Us form and send it to 
 
 ## implementation
 
-<CH.Scrollycoding
+<CH.Scrollycoding>
 
 ### Create the GraphQL files
 
