--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -14,24 +14,22 @@ This guide illustrates how to handle data from a Contact Us form and send it to 
 
 ## implementation
 
-<CH.Scrollycoding>
-
 ### Create the GraphQL files
 
 First, you need to set up the necessary GraphQL files to handle data submissions.
 
-1. In your store repository, go to the `src` folder, and create a new `graphql` subfolder:
+1. In your store repository, go to the `src` folder, if you don’t have one already, create a new `graphql` folder.
+2. Inside `graphql`, create the `thirdParty` folder.
+3. In the `thirdParty` folder, create two other subfolders:
 
-<CH.Code rows={1}>
-```bash Bash
-mkdir -p src/graphql/thirdParty/{resolvers,typeDefs}
-```
-</CH.Code>
+   - `resolvers`
+   - `typeDefs`
 
-2. Create an `index.ts` file inside the `resolvers` folder to set up the base structure for your resolver functions.
+4. Create an `index.ts` file inside the `resolvers` folder to set up the base structure for your resolver functions.
 
-> ℹ️ For further details on code implementation, see the [`thirdParty`](https://github.com/vtex-sites/playground.store/tree/main/src/graphql/thirdParty) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
----
+  > ℹ️ For further details on code implementation, see the [`thirdParty`](https://github.com/vtex-sites/playground.store/tree/main/src/graphql/thirdParty) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
+
+<CH.Scrollycoding>
 
 ### Define the types
 
@@ -155,8 +153,8 @@ Create a new section to receive the Contact Form data.
 
 2. In `ContactForm` folder, create the following files:
 
-- `ContactForm.tsx`: The main component file.
-- `contant-form.module.scss`: The stylesheet for the component.
+   - `ContactForm.tsx`: The main component file.
+   - `contant-form.module.scss`: The stylesheet for the component.
 
 3. Add the following to the `ContactForm.tsx`:
 
